--- a/backend/package.json
+++ b/backend/package.json
@@ -30,7 +30,9 @@
     "body-parser": "^1.20.1",
     "celebrate": "^15.0.1",
     "express": "^4.18.2",
+    "express-winston": "^4.2.0",
     "jsonwebtoken": "^9.0.0",
-    "mongoose": "^6.8.0"
+    "mongoose": "^6.8.0",
+    "winston": "^3.8.2"
   }
 }
